@@ -17,7 +17,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 
 /**
  * 任务引擎类，用于管理和执行任务
@@ -31,7 +30,8 @@ public class TaskEngine {
 
     // 私有构造函数，允许传入自定义线程池
     private TaskEngine(ExecutorService taskThreadPool) {
-        this.taskThreadPool = taskThreadPool != null ? taskThreadPool : new ThreadPoolExecutor(
+        this.taskThreadPool = taskThreadPool != null ? taskThreadPool
+                : new ThreadPoolExecutor(
                 100,
                 100,
                 60,
@@ -68,11 +68,13 @@ public class TaskEngine {
             throw new IllegalStateException("任务引擎已经启动!");
         }
 
+        // 获取任务配置
         TaskConfig taskConfig = context.getTaskConfig();
         if (taskConfig == null) {
             log.warn("the task config is null.");
             throw new IllegalTaskConfigException("任务配置为空");
         }
+        // 获取任务编排规则
         List<List<String>> arrange = taskConfig.getArrangeRule();
         if (CollectionUtils.isEmpty(arrange)) {
             log.warn("the task arrange is empty...");
@@ -85,14 +87,16 @@ public class TaskEngine {
         // 第一组是前置任务,中间N个组是并行任务,最后一个组是后置任务
         // 前置任务
         List<String> preTasks = arrange.get(0);
-        arrangeToOneFuture(ExpressionParser.parseExpressions(preTasks, context.getTaskInstanceMap(), taskConfig.getTaskDetailsMap()), context).join();
+        arrangeToOneFuture(ExpressionParser.parseExpressions(preTasks, context.getTaskInstanceMap(),
+                taskConfig.getTaskDetailsMap()), context).join();
 
         // 并行任务
         if (arrange.size() > 2) {
             List<CompletableFuture<Void>> parallelFutures = new ArrayList<>();
             for (int i = 1; i < arrange.size() - 1; i++) {
                 List<String> parallelTasks = arrange.get(i);
-                CompletableFuture<Void> future = arrangeToOneFuture(ExpressionParser.parseExpressions(parallelTasks, context.getTaskInstanceMap(), taskConfig.getTaskDetailsMap()), context);
+                CompletableFuture<Void> future = arrangeToOneFuture(ExpressionParser.parseExpressions(parallelTasks,
+                        context.getTaskInstanceMap(), taskConfig.getTaskDetailsMap()), context);
                 parallelFutures.add(future);
             }
             // 等待所有并行任务完成
@@ -105,17 +109,24 @@ public class TaskEngine {
         if (arrange.size() >= 2) {
             // 后置任务
             List<String> postTasks = arrange.get(arrange.size() - 1);
-            arrangeToOneFuture(ExpressionParser.parseExpressions(postTasks, context.getTaskInstanceMap(), taskConfig.getTaskDetailsMap()), context).join();
+            arrangeToOneFuture(ExpressionParser.parseExpressions(postTasks, context.getTaskInstanceMap(),
+                    taskConfig.getTaskDetailsMap()), context).join();
         } else {
             log.warn("没有后置任务组...");
         }
 
         // 设置引擎启动标志位
         context.setEngineStarted(true);
-        // clear task instance map
+        // 清空任务实例缓存
         context.clearTaskInstanceMap();
     }
 
+    /**
+     * 处理任务参数
+     *
+     * @param taskDetailsMap 任务详情映射
+     * @param context        请求上下文
+     */
     private void handleTaskParams(Map<String, TaskDetail> taskDetailsMap, RequestContext context) {
         taskDetailsMap.values().forEach(detail -> {
             Map<String, Object> params = handleTaskParams(detail.getTaskParams(), context);
@@ -123,6 +134,13 @@ public class TaskEngine {
         });
     }
 
+    /**
+     * 处理任务参数
+     *
+     * @param taskParams 任务参数列表
+     * @param context    请求上下文
+     * @return 处理后的参数
+     */
     public Map<String, Object> handleTaskParams(List<TaskParam> taskParams, RequestContext context) {
         if (CollectionUtils.isEmpty(taskParams)) {
             return new HashMap<>();
@@ -136,7 +154,8 @@ public class TaskEngine {
                 // 从 Context 中获取的参数在任务执行时处理
                 if (StringUtils.isEmpty(value) && type != TaskParam.Type.CONTEXT) {
                     log.error("task param is required, but value is empty, taskParam:{}", taskParam);
-                    throw new IllegalTaskConfigException("task param is required, but value is empty, taskParam:" + taskParam);
+                    throw new IllegalTaskConfigException(
+                            "task param is required, but value is empty, taskParam:" + taskParam);
                 }
             } else {
                 if (StringUtils.isEmpty(value)) {
@@ -145,66 +164,69 @@ public class TaskEngine {
             }
             try {
                 value = value.trim();
-                switch (type) {
-                    case STRING:
-                        params.put(taskParam.getName(), value);
-                        break;
-                    case INT:
-                        params.put(taskParam.getName(), Integer.parseInt(value));
-                        break;
-                    case LONG:
-                        params.put(taskParam.getName(), Long.parseLong(value));
-                        break;
-                    case DOUBLE:
-                        params.put(taskParam.getName(), Double.parseDouble(value));
-                        break;
-                    case BOOLEAN:
-                        params.put(taskParam.getName(), Boolean.parseBoolean(value));
-                        break;
-                    case LIST:
-                        params.put(taskParam.getName(), value.split(","));
-                        break;
-                    case MAP:
-                        String[] split = value.split(",");
-                        Map<String, String> map = new HashMap<>();
-                        for (String s : split) {
-                            String[] kv = s.split(":");
-                            map.put(kv[0], kv[1]);
-                        }
-                        params.put(taskParam.getName(), map);
-                        break;
-                    case JSON:
-                        if (JSON.isValid(value)) {
-                            params.put(taskParam.getName(), JSON.parse(value));
-                        }
-                        break;
-                    case JSON_ARRAY:
-                        if (JSON.isValidArray(value)) {
-                            params.put(taskParam.getName(), JSON.parseArray(value));
-                        }
-                        break;
-                    case CMS:
-                        // 从CMS中获取
-                        // TODO
-                        break;
-                    case CONTEXT:
-                        // 从请求上下文中获取
-                        // 任务执行时获取 value 为 key 的值
-                        if (!(value.startsWith("#(") && value.endsWith(")#"))) {
-                            log.error("task param value is not start with '\"#(' or end with ')#\"', taskParam:{}", taskParam);
-                            throw new IllegalTaskConfigException("CONTEXT task param value must be start with '\"#(' and end with ')#\"', taskParam:" + taskParam);
-                        }
-                        params.put(taskParam.getName(), value);
-                        break;
-                    default:
-                        break;
-                }
+                setParamValues(taskParam, type, params, value);
             } catch (Exception e) {
                 log.error("handle task params error, taskParam:{}", taskParam, e);
             }
 
         }
         return params;
+    }
+
+    private static void setParamValues(TaskParam taskParam, TaskParam.Type type, Map<String, Object> params, String value) {
+        switch (type) {
+            case STRING:
+                params.put(taskParam.getName(), value);
+                break;
+            case INT:
+                params.put(taskParam.getName(), Integer.parseInt(value));
+                break;
+            case LONG:
+                params.put(taskParam.getName(), Long.parseLong(value));
+                break;
+            case DOUBLE:
+                params.put(taskParam.getName(), Double.parseDouble(value));
+                break;
+            case BOOLEAN:
+                params.put(taskParam.getName(), Boolean.parseBoolean(value));
+                break;
+            case LIST:
+                params.put(taskParam.getName(), value.split(","));
+                break;
+            case MAP:
+                String[] split = value.split(",");
+                Map<String, String> map = new HashMap<>();
+                for (String s : split) {
+                    String[] kv = s.split(":");
+                    map.put(kv[0], kv[1]);
+                }
+                params.put(taskParam.getName(), map);
+                break;
+            case JSON:
+                if (JSON.isValid(value)) {
+                    params.put(taskParam.getName(), JSON.parse(value));
+                }
+                break;
+            case JSON_ARRAY:
+                if (JSON.isValidArray(value)) {
+                    params.put(taskParam.getName(), JSON.parseArray(value));
+                }
+                break;
+            case CONTEXT:
+                // 从请求上下文中获取
+                // 任务执行时获取 value 为 key 的值
+                if (!(value.startsWith("#(") && value.endsWith(")#"))) {
+                    log.error("task param value is not start with '\"#(' or end with ')#\"', taskParam:{}",
+                            taskParam);
+                    throw new IllegalTaskConfigException(
+                            "CONTEXT task param value must be start with '\"#(' and end with ')#\"', taskParam:"
+                                    + taskParam);
+                }
+                params.put(taskParam.getName(), value);
+                break;
+            default:
+                break;
+        }
     }
 
     /**
@@ -224,8 +246,7 @@ public class TaskEngine {
 
         // 等待所有任务完成
         return CompletableFuture.allOf(
-                futures.values().toArray(new CompletableFuture[0])
-        );
+                futures.values().toArray(new CompletableFuture[0]));
     }
 
     /**
@@ -236,7 +257,8 @@ public class TaskEngine {
      * @param context 请求上下文
      * @return 任务节点的CompletableFuture
      */
-    private CompletableFuture<Void> submitTask(TaskGraph.TaskNode node, Map<TaskGraph.TaskNode, CompletableFuture<Void>> futures, RequestContext context) {
+    private CompletableFuture<Void> submitTask(TaskGraph.TaskNode node,
+                                               Map<TaskGraph.TaskNode, CompletableFuture<Void>> futures, RequestContext context) {
         // 如果任务节点已经提交过，则直接返回其CompletableFuture
         if (futures.containsKey(node)) {
             return futures.get(node);
@@ -245,15 +267,16 @@ public class TaskEngine {
         // 提交依赖任务
         List<CompletableFuture<Void>> dependencyFutures = node.getDependencies().stream()
                 .map(dep -> submitTask(dep, futures, context))
-                .collect(Collectors.toList());
+                .toList();
 
         // 提交当前任务，并在所有依赖任务完成后执行
         CompletableFuture<Void> taskFuture = CompletableFuture.allOf(
-                dependencyFutures.toArray(new CompletableFuture[0])
-        ).thenRunAsync(() -> node.getTask().accept(context), taskThreadPool);
+                        dependencyFutures.toArray(new CompletableFuture[0]))
+                .thenRunAsync(() -> node.getTask().accept(context), taskThreadPool);
 
         // 将任务节点及其CompletableFuture存储到futures中
         futures.put(node, taskFuture);
         return taskFuture;
     }
+
 }
